--- a/templates/apps/directorio/list.html
+++ b/templates/apps/directorio/list.html
@@ -4,7 +4,10 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Directorio</h1>
+                <h1 class="text-primary font-bold text-xl flex items-center gap-2">
+                    <span class="icon-[fluent--book-contacts-28-filled]"></span>
+                    Directorio
+                </h1>
                 <h2 class="text-muted text-sm">Contactos del corporativo</h2>
             </div>
 
