--- a/templates/apps/fotos/explorador.html
+++ b/templates/apps/fotos/explorador.html
@@ -4,8 +4,10 @@
 
             <!-- START -->
             <div class="order-1 md:order-none">
-                <h1 class="font-bold text-xl flex items-center gap-2"><span class="icon-[mingcute--pic-fill]"></span>
-                    Fotos</h1>
+                <h1 class="text-primary font-bold text-xl flex items-center gap-2">
+                    <span class="icon-[mingcute--pic-fill]"></span>
+                    Fotos
+                </h1>
                 <h2 class="text-muted text-sm">Fotos de los eventos corporativos.</h2>
             </div>
 
