--- a/templates/apps/papeleria/reportes/index.html
+++ b/templates/apps/papeleria/reportes/index.html
@@ -4,7 +4,10 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Reportes</h1>
+                <h1 class="text-primary font-bold text-xl flex items-center gap-2">
+                    <span class="icon-[streamline-pixel--business-products-data-file-bars]"></span>
+                    Reportes
+                </h1>
                 <h2 class="text-muted text-sm"></h2>
             </div>
 
