--- a/templates/apps/papeleria/requisiciones/list.html
+++ b/templates/apps/papeleria/requisiciones/list.html
@@ -5,7 +5,10 @@
 
             <!-- START -->
             <div class="justify-self-start">
-                <h1 class="font-bold text-xl flex items-center gap-2">Requisiciones</h1>
+                <h1 class="text-primary font-bold text-xl flex items-center gap-2">
+                    <span class="icon-[et--document]"></span>
+                    Requisiciones
+                </h1>
                 <h2 class="text-muted text-sm mb-2">Solicite y gestione las solicitudes de papelería de la empresa</h2>
                 {% if perms.papeleria.add_requisicion %}
                     <a href="{% url 'papeleria:requisiciones__create' %}" class="btn btn-sm btn-primary">
