--- a/templates/components/apps/directorio/contactos/card.html
+++ b/templates/components/apps/directorio/contactos/card.html
@@ -35,9 +35,14 @@
 
             <!-- INFO PRINCIPAL -->
             <div class="flex-1 min-w-0">
-                <h2 class="text-lg font-semibold leading-tight truncate"
-                    title="{{ contacto.nombre_completo }}">
-                    {{ contacto.nombre_completo }}
+                <h2 class="text-primary text-lg font-semibold leading-tight truncate"
+                    title="{{ contacto.nombre_completo }}"
+                >
+                    {% if perms.directorio.view_contacto %}
+                        <a href="{% url 'directorio:detail' contacto.pk %}">{{ contacto.nombre_completo }}</a>
+                    {% else %}
+                        {{ contacto.nombre_completo }}
+                    {% endif %}
                 </h2>
 
                 {% if contacto.numero_empleado %}
